# CXX-template

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh
cmake/: findCatch2.cmake  findGit.cmake
scripts/: init.sh
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.cpp
